--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ h4 {
     border: 5px solid rgba(255, 255, 255, 0.832);
 }
 
+.start-btn {
+    display: none;
+}
+
 /* Responsive codes */
 
 @media screen and (max-width: 1037px) {
@@ -68,12 +72,32 @@ h4 {
         width: 100%;
     }
 
+    h1 {
+        font-size: 1.4rem;
+    }
+
     body {
         padding-top: 4%;
     }
 
     .card {
+        width: 150px;
+        height: 90px;
         background-position: center;
+    }
+
+    p {
+        font-size: .6rem;
+    }
+
+    .start-btn {
+        display: block;
+        padding: 8px 15px;
+        background-color: whitesmoke;
+        color: grey;
+        font-size: 1.01rem;
+        border-radius: 5px;
+        margin: 10px 0 10px 40%;
     }
 
 }
